<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/controlLayout"
        android:background="@drawable/border">

        <ImageView
            android:id="@+id/ImageViewForDrawing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/drawing_area" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/controlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:contentDescription="@string/left" />

            <ImageButton
                android:id="@+id/btnUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
                android:contentDescription="@string/up" />

            <ImageButton
                android:id="@+id/btnDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:contentDescription="@string/down" />

            <ImageButton
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:contentDescription="@string/right" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioGroup
                android:id="@+id/radioGroupColors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/btnColorGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Green"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/btnColorBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Blue" />

                <RadioButton
                    android:id="@+id/btnColorRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Red" />
            </RadioGroup>

            <SeekBar
                android:id="@+id/seekBarThickness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100"
                android:progress="20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Canvas"
                android:onClick="startCanvas" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clearCanvas"
                android:text="Clear Canvas" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
